sass/components/_postinfo.scss
//! Post Info
//!
//! The informational box that displays on a blog post.

.post-title {
    font-size: 32pt;
    font-family: "Lora", serif;
    font-weight: 600;
    line-height: 1em;
}

.post-info {
    background: $surface-container-low;
    padding: 2em;
    border-radius: 0.6em;
    line-height: 1.5em;
}

.date-and-tags {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;

    p {
        margin: auto 0.6em;
    }

    i {
        padding-right: 0.6em;
        align-self: center;
    }

    .post-tags {
        margin-top: 0.2em;
        display: inline-flex;
    }

    .post-tags-container {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        gap: 0.4em;

        .post-tag {
            outline-color: $outline;
            outline-width: 0.1em;
            outline-style: solid;

            display: inline-block;
            padding: 6pt;
            margin: 3pt 1pt;
            border-radius: 8pt;

            text-decoration: none;
        }

        .snippet-tag {
            outline-color: $warn;
            color: $on-warn-container;
            background-color: $warn-container;
            display: inline-block;
            padding: 6pt;
            margin: 3pt 1pt;
            border-radius: 8pt;
        }

        .snippet-tag:hover,
        .snippet-tag:active,
        .snippet-tag:focus-visible {
            outline-color: $warn-container;
            background-color: $warn;
            color: $warn-text;
        }
    }
}

.updated-date {
    color: $outline;
    margin: 0;
    margin-top: 0.2em;
}

.post-desc {
    padding-bottom: 0.8em;
}

.toc {
    #toc-cb {
        display: none; // removes the checkbox

        #text {
            padding: none;
            margin: none;
        }
    }

    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: 100%;
    padding: 0.6em;
    // color: adjust-color($primary, $lightness: 20%); TODO

    .toc-button {
        justify-self: right;
        display: inline-flex;
        min-width: 14.45em;

        .toc-btn-icon {
            padding-right: 0.6em;
            align-self: center;
        }

        // show/hide text + icon
        #show-toc {
            display: inline-flex;
        }

        #hide-toc {
            display: none;
        }
    }

    .toc-list {
        display: none;
        padding-left: 1em;
        padding-bottom: 1em;
    }

    #toc-cb:checked~.toc-list {
        display: block;
    }

    // show/hide text + icon, swapped
    #toc-cb:checked .extended-fab-btn #show-toc {
        display: none;
    }

    #toc-cb:checked .extended-fab-btn #hide-toc {
        display: block;
    }

    // get rid of ugly spaces
    ul {
        padding: 0 auto;
        margin: 0 auto;
    }
}

